src/tests/code/fail/fail_int_literal_bin.u
entrypoint: ~()->(iErrorCode:~i64{1})
{
	iErrorCode :=	0b00101021;	// Character 2 is invalid in a binary integer.
}
